--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.17.1",
+    "next": "16.0.0",
+    "prisma": "^6.17.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "tsx": "^4.20.6"
   },
   "devDependencies": {
     "typescript": "^5",
